tests/vertical-slice/accept/websocket_message_resource_close.hew
import std::net::websocket;

fn close_message(value: websocket.Message) {
    value.close();
}

fn main() -> i64 {
    0
}
