tests/vertical-slice/reject/std_panic_wrapper_cron_parse_invalid.hew
import std::time::cron;

fn main() -> i64 {
    let expr = cron.parse("nope");
    let next = expr.next(0);
    expr.free();
    next
}
